--- a/index.html
+++ b/index.html
@@ -70,11 +70,8 @@
 											<div class="content">
 												<h3>Linguagens de Programação e Banco de Dados</h3>
 												<ul>
-													<li>Python com foco em análise de dados.</li>
-													<li>Web scraping com Python.</li>
-													<li>SQL para extração de dados.</li>
-													<li>R para modelagem estatística.</li>
-													<li>Banco de Dados SQLite, Postres, MySQL, Oracle, MongoDB e Cassandra.</li>
+													<li>Pensamento Estratégico</li>
+													<li>SQL Language</li>
 												</ul>
 											</div>
 										</article>
@@ -83,11 +80,11 @@
 											<div class="content">
 												<h3>Estatística e Machine Learning</h3>
 												<ul>
-													<li>Estatística descritiva (localização, dispersão, assimetria, kurtosis, densidade).</li>
-													<li>Algoritmos de Regressão, classificação, clusterização e "learn to rank".</li>
-													<li>Técnicas de balanceamento dos dados, seleção de atributos e redução de dimensionalidade.</li>
-													<li>Métricas de performance dos algoritmos (RMSE, MAE, MAPE, Confusion Matrix, Precisão, Recall, Curva ROC, Curva Lift, AUC, Silhouette Score, DB-Index).</li>
-													<li>Pacotes de Machine Learning: Sklearn e Scipy.</li>
+													<li>Estatística descritiva (localização, dispersão, assimetria, kurtosis, densidade)</li>
+													<li>Algoritmos de Regressão, classificação, clusterização e "learn to rank"</li>
+													<li>Técnicas de balanceamento dos dados, seleção de atributos e redução de dimensionalidade</li>
+													<li>Métricas de performance dos algoritmos (RMSE, MAE, MAPE, Confusion Matrix, Precisão, Recall, Curva ROC, Curva Lift, AUC, Silhouette Score, DB-Index)</li>
+													<li>Pacotes de Machine Learning: Sklearn e Scipy</li>
 												</ul>
 											</div>
 										</article>
@@ -96,8 +93,8 @@
 											<div class="content">
 												<h3>Visualização de Dados</h3>
 												<ul>
-													<li>Matplotlib, Seaborn, Plotly e Bokeh.</li>
-													<li>Power BI, Tableau, Metabase e Looker.</li>
+													<li>Matplotlib, Seaborn, Plotly e Bokeh</li>
+													<li>Power BI, Tableau, Metabase e Looker</li>
 												</ul>
 											</div>
 										</article>
@@ -106,9 +103,8 @@
 											<div class="content">
 												<h3>Engenharia de Software</h3>
 												<ul>
-													<li>Git, Github, Gitlab, Cookiecutter, Virtual Environment e Docker.</li>
-													<li>Streamlit, Flask, Python API's.</li>
-													<li>Cloud Heroku, AWS Amazon, Google Cloud Platform (GCP) e Azure.</li>
+													<li>Github</li>
+													<li>SQLite3 Database</li>
 												</ul>
 											</div>
 										</article>
